--- a/home.html
+++ b/home.html
@@ -7,6 +7,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/Store.css">
 <link rel="stylesheet" href="css/animate.css">
+
+<link rel="icon" type="image/png" href="logo.png" size="16x16">
+<link rel="icon" type="image/png" href="logo.png" size="32x32">
+
+<!-- for IE -->
+<link rel="icon" type="image/x-icon" href="logo.ico" >
+<link rel="shortcut icon" type="image/x-icon" href="logo.ico"/>
+
+
 </head>
 <body>
 <header id="header">
