--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@ visit us at <a href="https://tranquil-depths-79222.herokuapp.com/">
   data-width="450"
   data-show-faces="true">
 </div>
-
+<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
 <br>
 <footer id="fbottom" style="position:relative" >
 <hr>
