--- a/home.html
+++ b/home.html
@@ -72,8 +72,9 @@
 <input type="button" id="edt" value="Edit">
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
-</nav>
-<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
+</nav><br>
+<div id="fblogin" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
+
 <div id="winMsg" >
 <h1>New Product</h1>
 <h1>Product's Name<input type="text"  id="newItemN" placeholder="products Name"  required></h1>
