--- a/home.html
+++ b/home.html
@@ -73,8 +73,13 @@
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav><br>
-<div id="fblogin" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
-
+<div id="fblogin" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false" width="100" height="100"></div>
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 <div id="winMsg" >
 <h1>New Product</h1>
 <h1>Product's Name<input type="text"  id="newItemN" placeholder="products Name"  required></h1>
@@ -134,20 +139,13 @@ select action</h1><br>
       <input type="button" id="srtdt" value="Added Date"> <br><br>
 	  <input type="button" id="clrlst" value="Clear List"> 
   </div>
-  <div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
-
 <div id= "socail">
 <h2><a href="http://www.google.com"> <img src="logos/SOCAIL.jpg" width="200px" height="75px"></a>
 visit us at <a href="https://tranquil-depths-79222.herokuapp.com/">
 <img class="animated bounce infinite" src="logos/memg.png" height="75px; width="200px">
  </a></h2>
 </div>
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
+
 <br>
 <footer id="fbottom" style="position:relative" >
 <hr>
