--- a/home.html
+++ b/home.html
@@ -72,8 +72,8 @@
 <input type="button" id="edt" value="Edit">
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
-</nav><br>
-<div id="fblogin" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false" width="100" height="100"></div>
+</nav>
+<div  class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="true" data-auto-logout-link="false"></div>
 <div
   class="fb-like"
   data-share="true"
