--- a/home.html
+++ b/home.html
@@ -73,13 +73,14 @@
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
-<div  class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="true" data-auto-logout-link="false"></div>
+<div  class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="true" data-auto-logout-link="false"></div>
 <div
   class="fb-like"
   data-share="true"
   data-width="450"
   data-show-faces="true">
 </div>
+
 <div id="winMsg" >
 <h1>New Product</h1>
 <h1>Product's Name<input type="text"  id="newItemN" placeholder="products Name"  required></h1>
@@ -145,6 +146,7 @@ visit us at <a href="https://tranquil-depths-79222.herokuapp.com/">
 <img class="animated bounce infinite" src="logos/memg.png" height="75px; width="200px">
  </a></h2>
 </div>
+
 
 <br>
 <footer id="fbottom" style="position:relative" >
