--- a/home.html
+++ b/home.html
@@ -129,15 +129,13 @@
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
-<div  class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="true" data-auto-logout-link="false"></div>
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<div  class="fb-login-button" 
+data-max-rows="1" data-size="small"
+ data-show-faces="true"
+ data-auto-logout-link="false"></div>
 <div id="status">
 
 </div>
-
-<div id="fb-root"></div>
-
 <div
   class="fb-like"
   data-share="true"
