--- a/home.html
+++ b/home.html
@@ -132,7 +132,10 @@
 <div  class="fb-login-button" 
 data-max-rows="1" data-size="small"
  data-show-faces="true"
- data-auto-logout-link="false"></div>
+ data-auto-logout-link="false">
+ <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
+</div>
 <div id="status">
 
 </div>
