--- a/home.html
+++ b/home.html
@@ -129,6 +129,7 @@
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
+<div id="fb">
 <div id="status">
 
 </div>
@@ -147,7 +148,7 @@ data-max-rows="1" data-size="small"
   data-width="450"
   data-show-faces="true">
 </div>
-
+</div>
 <div id="winMsg" >
 <h1>New Product</h1>
 <h1>Product's Name<input type="text"  id="newItemN" placeholder="products Name"  required></h1>
