--- a/home.html
+++ b/home.html
@@ -159,8 +159,8 @@ data-max-rows="1" data-size="small"
 <div  id="mainM">
  <h1> Welcome to Shopping list <br>
     you can manage here your shopping list, and have it anywhere.</h1>
-	<h2>why us?<img  src="logo.png" width="80px" height="90px"> <br><br>
-	</h2><h2>you can create a list and edit it as u like <br>
+	<h2>why us?<img  src="logo.png" width="80px" height="90px"> <br><br></h2>
+	<h2>you can create a list and edit it as u like <br>
 	and have it anywhere you go through your moblie phone<br>	
    by clicking save you save the list, then load<br>
 	 aswell you can create template list for a <br>
