--- a/home.html
+++ b/home.html
@@ -206,6 +206,9 @@ select action</h1><br>
       <input type="button" id="srtdt" value="Added Date"> <br><br>
 	  <input type="button" id="clrlst" value="Clear List"> 
   </div>
+  <div id="fbcomt" class="fb-comments" 
+  data-href="https://developers.facebook.com/docs/plugins/comments#configurator" 
+  data-numposts="5"></div>
 <div id= "socail">
 <h2><a href="http://www.google.com"> <img src="logos/SOCAIL.jpg" width="200px" height="75px"></a>
 visit us at <a href="https://tranquil-depths-79222.herokuapp.com/">
