--- a/home.html
+++ b/home.html
@@ -207,7 +207,7 @@ select action</h1><br>
 	  <input type="button" id="clrlst" value="Clear List"> 
   </div>
   <div id="fbcomt" class="fb-comments" 
-  data-href="https://developers.facebook.com/docs/plugins/comments#configurator" 
+  data-href="https://www.facebook.com/ala.daoud.9/posts/10208257107017488" 
   data-numposts="1"></div>
 <div id= "socail">
 <h2><a href="http://www.google.com"> <img src="logos/SOCAIL.jpg" width="200px" height="75px"></a>
