--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@ data-max-rows="1" data-size="small"
 </div>
 
 <div id="LoSaWin">
-<h2>sort (view) only:</h2>
+<h1>Load & Save</h1>
 select action</h1><br>
 <input type="button" id="Lod" value="Load">
 <input type="button" id="Sav" value="Save">
