--- a/home.html
+++ b/home.html
@@ -214,7 +214,7 @@ select action</h1><br>
   <div id= "theList">
   </div>
  
-  <hr>sort (view) only:<br>
+  <hr><h2>sort (view) only:</h2>
   <input type="button" id="srtAd" value="Quntity Descending">
     <input type="button" id="AscQu" value="Quantity Ascending"> 
       <input type="button" id="srtdt" value="Added Date"> <br><br>
