--- a/home.html
+++ b/home.html
@@ -140,22 +140,19 @@
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
 <div id="fb">
+<div id="yo">
 yo
-<div id="status">
-
-</div>
 
 <div  class="fb-login-button" 
 data-max-rows="1" data-size="small"
  data-show-faces="true"
- data-auto-logout-link="false">
-
-</div>
+ data-auto-logout-link="false"></div>
 <div
   class="fb-like"
   data-share="true"
   data-width="450"
   data-show-faces="true">
+</div>
 </div>
 </div>
 <div id="winMsg" >
