--- a/home.html
+++ b/home.html
@@ -141,8 +141,7 @@
 </nav>
 <div id="fb">
 <div id="yo">
-yo
-
+<div id="status"></div>
 <div  class="fb-login-button" 
 data-max-rows="1" data-size="small"
  data-show-faces="true"
@@ -151,8 +150,7 @@ data-max-rows="1" data-size="small"
   class="fb-like"
   data-share="true"
   data-width="450"
-  data-show-faces="true">
-</div>
+  data-show-faces="true"></div>
 </div>
 </div>
 <div id="winMsg" >
