--- a/home.html
+++ b/home.html
@@ -132,14 +132,14 @@
 	  <hr>
 </header>
 
-<nav class="bounceInDown animated" id="navbar">
+<nav  id="navbar">
 <input type="button"  id="Menu" value="Menu">
 <input type="button" id="NewPrd" value="Add Product">
 <input type="button" id="edt" value="Edit">
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
-<div id="fb">
+<div id="fb"class="bounceInDown animated">
 <div id="yo">
 <div id="status"></div>
 <div  class="fb-login-button" 
@@ -199,7 +199,7 @@ select action</h1><br>
 <input type="button" id="confdlt" value="Delete">
 </div>
 
-<div class="animated bounceInDown" id= "MainList">
+<div  id= "MainList">
 <h1>items list<div id="datediv">  <input type="button" id="datebtn" value="add date"></div></h1>
 <h2>index&nbsp; |&nbsp;  name&nbsp; | &nbsp;quant&nbsp; |&nbsp; Added date&nbsp; |</h2>
 <div id="chsDt"><h1> List's Date</h1>
