--- a/home.html
+++ b/home.html
@@ -142,7 +142,10 @@
 <div id="fb"class="bounceInDown animated">
 <div id="yo">
 <div id="status"></div>
-
+<div  class="fb-login-button" 
+data-max-rows="2" data-size="small"
+ data-show-faces="true"
+ data-auto-logout-link="false"></div>
 <div
   class="fb-like"
   data-share="true"
