--- a/home.html
+++ b/home.html
@@ -139,8 +139,7 @@
 <input type="button" id="dlt" value="Delete">
 <input type="button" id="LoSa" value="Load/Save">
 </nav>
-<div id="fb"class="bounceInDown animated">
-<div id="yo">
+<div id="fb">
 <div id="status"></div>
 <div  class="fb-login-button" 
 data-max-rows="2" data-size="small"
@@ -151,7 +150,6 @@ data-max-rows="2" data-size="small"
   data-share="true"
   data-width="450"
   data-show-faces="true"></div>
-</div>
 </div>
 <div id="winMsg" >
 <h1>New Product</h1>
